# weav

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: gitleaks.yml  release.yml  tox.yml
tests/: __init__.py  test_cli.py  test_datasources.py  test_template.py  test_utils.py
weav/: __init__.py  cli.py  datasources.py  template.py  utils.py
